# python-project-174

./: README.md  __init__.py  package.json  pyproject.toml
gendiff/: __main__.py
gendiff/formatters/: __init__.py  json.py  plain.py
gendiff/scripts/: gendiff.py  read_json.py
gendiff/tests/: test_generate_diff.py
